<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_burgermenu"
            android:layout_width="25dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:src="@drawable/burger_menu" />

        <ImageView
            android:id="@+id/img_cart"
            android:layout_width="25dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:src="@drawable/cart" />

    </LinearLayout>

    <SearchView
        android:id="@+id/sv_buscador_comida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="#5BB0A9AB"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tituloMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="135dp"
        android:text="@string/titulo_menu"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_buscador_comida" />

    <TableLayout
        android:id="@+id/layoutCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="230dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Fila 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!-- Botón 1 en la fila 1 -->
            <Button
                android:id="@+id/btn_postres"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:onClick="searchPostresClick"
                android:text="@string/boton_postres"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- Botón 2 en la fila 1 -->
            <Button
                android:id="@+id/btn_pizzas"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/boton_pizzas"

                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>

        <!-- Fila 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!-- Botón 1 en la fila 2 -->
            <Button
                android:id="@+id/btn_parrillas"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/boton_parrillas"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- Botón 2 en la fila 2 -->
            <Button
                android:id="@+id/btn_hamburgesas"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/boton_hamburgesas"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>

        <!-- Fila 3 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!-- Botón 1 en la fila 3 -->
            <Button
                android:id="@+id/btn_panaderia"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/boton_panaderia"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- Botón 2 en la fila 3 -->
            <Button
                android:id="@+id/btn_helados"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/boton_helados"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>