<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="409dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layoutBuscador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_burgermenu"
            android:layout_width="25dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:src="@drawable/burger_menu" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/img_cart"
            android:layout_width="25dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:src="@drawable/cart" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/layoutCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Fila 1 -->
        <TableRow
            android:id="@+id/trCategorias1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!-- Botón 1 en la fila 1 -->

            <!-- Botón 2 en la fila 1 -->

            <Button
                android:id="@+id/btn_postres"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"

                android:onClick="searchPostresClick"
                android:text="@string/boton_postres"
                android:drawablePadding="0dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_pizzas"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/boton_pizzas"

                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>

        <!-- Fila 2 -->
        <TableRow
            android:id="@+id/trCategorias2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!-- Botón 1 en la fila 2 -->
            <Button
                android:id="@+id/btn_parrillas"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/boton_parrillas"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- Botón 2 en la fila 2 -->
            <Button
                android:id="@+id/btn_hamburgesas"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/boton_hamburgesas"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>

        <!-- Fila 3 -->
        <TableRow
            android:id="@+id/trCategorias3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!-- Botón 1 en la fila 3 -->
            <Button
                android:id="@+id/btn_panaderia"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/boton_panaderia"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- Botón 2 en la fila 3 -->
            <Button
                android:id="@+id/btn_helados"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/boton_helados"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/layoutBuscador"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <FrameLayout
            android:id="@+id/flBuscador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5BB0A9AB">

            <EditText
                android:id="@+id/etBuscador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:enabled="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="¿Qué estás buscando?"
                android:inputType="none"
                android:textAlignment="center"
                android:textSize="15sp" />

        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvTituloMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="46dp"
        android:text="@string/titulo_menu"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layoutCategorias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutBuscador" />

</androidx.constraintlayout.widget.ConstraintLayout>