<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6FFFFFF"
    android:backgroundTint="#7CD1A5A5"
    tools:context=".Landing">

    <TextView
        android:id="@+id/tvTituloLanding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBurger"
        android:layout_width="374dp"
        android:layout_height="761dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="137dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91"
        app:srcCompat="@drawable/burger" />

    <ImageView
        android:id="@+id/imgPizza"
        android:layout_width="405dp"
        android:layout_height="786dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBurger"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        app:srcCompat="@drawable/pizza" />

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="120dp"
        android:layout_marginTop="608dp"
        android:background="#00000000"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/imgBurger"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLanding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texto_landing"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="393dp"
            android:layout_height="30dp"
            android:layout_weight="1"

            android:background="@color/color_botones_bg"
            android:text="@string/boton_continuar"
            android:textColor="@color/color_botones_txt"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="119dp"
        android:layout_height="92dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>